--- a/deploy/role.yaml
+++ b/deploy/role.yaml
@@ -2,7 +2,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   creationTimestamp: null
-  name: benchmarktesting-operator
+  name: cnsbench
 rules:
 - apiGroups:
   - ""
@@ -48,7 +48,7 @@ rules:
 - apiGroups:
   - apps
   resourceNames:
-  - benchmarktesting-operator
+  - cnsbench
   resources:
   - deployments/finalizers
   verbs:
@@ -67,7 +67,7 @@ rules:
   verbs:
   - get
 - apiGroups:
-  - benchmarking.example.com
+  - cnsbench.example.com
   resources:
   - '*'
   verbs:
