--- a/samples/openebs/openebs-pvcs-benchmark.yaml
+++ b/samples/openebs/openebs-pvcs-benchmark.yaml
@@ -3,8 +3,8 @@ kind: Benchmark
 metadata:
   name: openenbs-pvc-benchmark
 spec:
-  runtime: 120
   actions:
-    - runOnceSpec:
+    - name: vol-creation
+      runOnceSpec:
         specName: openebs-pvcs
         count: 10
