--- a/samples/sample-scale-benchmark.yaml
+++ b/samples/sample-scale-benchmark.yaml
@@ -3,9 +3,9 @@ kind: Benchmark
 metadata:
   name: example-benchmark
 spec:
-  runtime: 120
   actions:
-    - scaleSpec:
+    - name: scale
+      scaleSpec:
         rateName: rateOne
         name: sample-deployment
   rates:
