Adds output collector container.
Runs a simple http server that listens on port 8888 and outputs a json
object for each request it receives.  The server gets deployed in the
cnsbench-system namespace and is exposed via a service - you can send
output to it via http://cnsbench-output-collector.cnsbench-system.svc.cluster.local:8888.
By default, the benchmark's metadata info is sent there after a benchmark
finishes.

--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -53,3 +53,42 @@ spec:
             cpu: 100m
             memory: 20Mi
       terminationGracePeriodSeconds: 10
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: output-collector
+  namespace: system
+spec:
+  selector:
+    app: output-collector
+  ports:
+  - port: 8888
+    protocol: TCP
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: output-collector
+  namespace: system
+  labels:
+    app: output-collector
+spec:
+  containers:
+  - name: output-collector
+    image: cnsbench/output-collector
+    command:
+    - /output-collector
+    ports:
+    - containerPort: 8888
+    resources:
+      limits:
+        cpu: 100m
+        memory: 30Mi
+      requests:
+        cpu: 100m
+        memory: 20Mi
+    securityContext:
+      allowPrivlegeEscalation: false
+    securityContext:
+      runAsUser: 65532
